# TrustMem

./: .dockerignore  .env.example  .gitignore  .mergify.yml  Dockerfile  Makefile  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml
.github/workflows/: pr-title.yml  publish.yml  static-checks.yml  test.yml
.kiro/settings/: lsp.json
.kiro/steering/: goal-driven-evolution.md  memory.md  setup.md
assets/: README.md
benchmarks/datasets/: core-v1.json
docs/: api-reference.md  apikey-mode.md  deployment.md  design-apikey-mode.md  graph-benchmark-rationale.md  plan.md  user-guide.md
examples/: explain_bool_demo.py
memoria/: cli.py  config.py  schema.py
memoria/api/: database.py  dependencies.py  main.py  middleware.py  models.py  remote_auth_service.py
memoria/api/routers/: admin.py  auth.py  memory.py  snapshots.py  user_ops.py
memoria/core/: db_consumer.py  exceptions.py  git_for_data.py  llm.py  scheduler.py  tiered_loader.py  validation.py
memoria/core/auth/: encryption.py
memoria/core/embedding/: __init__.py  client.py  providers.py
memoria/datasets/: core-v1.json  core-v2.json  graph-entity-v1-llm.json  graph-entity-v1.json  graph-entity-v2.json  large-graph-v1-llm.json  large-graph-v1.json  large-graph-v2.json
memoria/mcp_cloud/: server.py
memoria/mcp_local/: __main__.py  server.py
memoria/templates/: claude_rule.md  cursor_rule.md  kiro_steering.md
memoria/tests/: conftest.py  test_docker.py  test_e2e.py  test_incremental_governance.py  test_mcp.py
scripts/: bump_version.py  verify_session_id_usage.py
tests/: conftest.py
tests/integration/: conftest.py  test_db_field_verification.py  test_dual_trigger_e2e.py  test_entity_linking_e2e.py  test_explain_e2e.py  test_graph_db_e2e.py  test_mcp_stdio_e2e.py  test_memory_governance_e2e.py  test_memory_lifecycle_e2e.py  test_memory_system_e2e.py  test_opinion_evolution_e2e.py  test_reflection_candidates_e2e.py  test_tiered_loader_episodic.py
tests/unit/: test_activation_explain_path.py  test_activation_regressions.py  test_activation_strategy_consistency.py  test_apikey_auth.py  test_embedding_client.py  test_entity_extractor_heuristics.py  test_entity_link_weights.py  test_entity_linking.py  test_explain.py  test_graph_activation.py  test_graph_opinion.py  test_graph_reflection.py  test_llm.py  test_mcp_branch_crud.py  test_mcp_cloud.py  test_mcp_e2e.py  test_mcp_format_contract.py  test_memory_benchmark_schema.py  test_memory_governance.py  test_memory_history_endpoint.py  test_memory_profile.py  test_memory_retriever.py  test_memory_router_service.py  test_memory_typed_pipeline.py  test_ner_backend.py  test_observe_session_id_regression.py  test_observer_truncation.py  test_per_user_params.py  test_reflection_engine.py  test_reflection_importance.py  test_reflection_opinion.py  test_to_response_fields.py
(+69 files in other folders)
